<resources>
    <string name="app_name">WoWarDas</string>
    <string name="title_activity_location_view">Previous Locations</string>
    <string name="action_settings">Settings</string>
    <string name="countdown_timer">"Tap button or app will terminate in "</string>
    <string name="permission_denied">Permission denied</string>
    <string name="grant_permissions">Grant permissions in Settings</string>
    <string name="permissions_granted">Permissions granted!</string>
    <string name="gpx_export_success">Export to GPX file successful!</string>
    <string name="gpx_export_fail">Could not write file!</string>
    <string name="previos_locations_title">WoWarDas Locations</string>
    <string name="wowardas_locations">WoWarDas Locations</string>
    <string name="gespeicherte_koordinaten_anzeigen">Show Saved Locations</string>
    <string name="gps_koordinaten">GPS coordinates</string>
    <string name="id" translatable="false">"ID: "</string>
    <string name="latitude">"Latitude: "</string>
    <string name="longitude">"Longitude: "</string>
    <string name="timestamp">"Timestamp: "</string>
    <string name="copy_to_clipboard">copy to clipboard</string>
    <string name="export_to_gpx">export to GPX file</string>
    <string name="select_unselect">select/deselect</string>
    <string name="searching_for_GPS">Searching for GPS signal …</string>
    <string name="get_additional_location">Get additional location</string>
    <string name="dont_go">Do not exit automatically</string>
    <string name="no_entry_selected">No entry selected!</string>
    <string name="wowardas_gpx">WoWarDas.gpx</string>
    <string name="clear_db">Clear database</string>
    <string name="no_records_found">No records found.</string>
    <string name="location_added">Location added.</string>
    <string name="comment">comment</string>
    <string name="comment_loc">"About: "</string>
    <string name="delete_location">Delete Location</string>
    <string name="edit_comment">Edit Info</string>
    <string name="comment_added">Comment added.</string>
    <string name="loc_info_edit_hint">Location Info</string>
    <string name="edit_entry_title">Edit Info</string>
    <string name="edit_save">Save</string>
    <string name="delete_warning_title">Warning</string>
    <string name="delete_warning_text">Do you want to delete all entries?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning_delete_entry_text">"Do you want to delete this entry?: "</string>
</resources>