<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contextClickable="true"
    android:forceDarkAllowed="true"
    android:orientation="horizontal"
    android:paddingHorizontal="2dp"
    android:paddingVertical="2dp"
    android:visibility="visible"
    app:cardCornerRadius="4dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_wrapper"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btn_delete_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_cmt"
                app:layout_constraintTop_toBottomOf="@+id/tv_cmt" />

            <Button
                android:id="@+id/btn_edit_cmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_delete_location"
                app:layout_constraintTop_toBottomOf="@+id/tv_cmt" />

            <TextView
                android:id="@+id/tv_lot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                app:layout_constraintBottom_toTopOf="@+id/tv_dtt"
                app:layout_constraintStart_toStartOf="@+id/tv_lat"
                app:layout_constraintTop_toBottomOf="@+id/tv_lat" />

            <TextView
                android:id="@+id/tv_dtt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:text="@string/timestamp"
                app:layout_constraintBottom_toTopOf="@+id/tv_cmt"
                app:layout_constraintStart_toStartOf="@+id/tv_lot"
                app:layout_constraintTop_toBottomOf="@+id/tv_lot" />

            <TextView
                android:id="@+id/tv_cmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/comment_loc"
                app:layout_constraintBottom_toTopOf="@+id/btn_delete_location"
                app:layout_constraintStart_toStartOf="@+id/tv_dtt"
                app:layout_constraintTop_toBottomOf="@+id/tv_dtt" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="16dp"
                android:text="@string/id"
                app:layout_constraintBottom_toTopOf="@+id/tv_lat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/latitude"
                app:layout_constraintBottom_toTopOf="@+id/tv_lot"
                app:layout_constraintStart_toStartOf="@+id/tv_id"
                app:layout_constraintTop_toBottomOf="@+id/tv_id" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_opts"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="&#8942;"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:visibility="visible" />
    </LinearLayout>


</androidx.cardview.widget.CardView>